// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buy silver ticket by wire without promocode manager see event by id 1`] = `
Object {
  "config": Anything,
  "data": Object {
    "data": Object {
      "domain": "guuzen-events-nginx",
      "id": Any<String>,
      "name": "2019 foo event",
    },
  },
  "headers": Anything,
  "request": Anything,
  "status": 200,
  "statusText": Anything,
}
`;

exports[`Buy silver ticket by wire without promocode manager see event in list 1`] = `
Object {
  "config": Anything,
  "data": Object {
    "data": Array [
      Object {
        "domain": "guuzen-events-nginx",
        "id": Any<String>,
        "name": "2019 foo event",
      },
    ],
  },
  "headers": Anything,
  "request": Anything,
  "status": 200,
  "statusText": Anything,
}
`;

exports[`Buy silver ticket by wire without promocode manager see not paid and not delivered order by id 1`] = `
Object {
  "config": Anything,
  "data": Object {
    "data": Object {
      "cancelled": false,
      "currency": "RUB",
      "deliveredAt": null,
      "email": "john@example.com",
      "eventId": Any<String>,
      "firstName": "John",
      "id": Any<String>,
      "lastName": "Doe",
      "makedAt": Any<String>,
      "paid": false,
      "phone": "+123456789",
      "product": "silver_pass",
      "productId": Any<String>,
      "sum": "200",
      "tariffId": Any<String>,
      "userId": Any<String>,
    },
  },
  "headers": Anything,
  "request": Anything,
  "status": 200,
  "statusText": Anything,
}
`;

exports[`Buy silver ticket by wire without promocode manager see not paid and not delivered order in list 1`] = `
Object {
  "config": Anything,
  "data": Object {
    "data": Array [
      Object {
        "cancelled": false,
        "currency": "RUB",
        "deliveredAt": null,
        "email": "john@example.com",
        "eventId": Any<String>,
        "firstName": "John",
        "id": Any<String>,
        "lastName": "Doe",
        "makedAt": Any<String>,
        "paid": false,
        "phone": "+123456789",
        "product": "silver_pass",
        "productId": Any<String>,
        "sum": "200",
        "tariffId": Any<String>,
        "userId": Any<String>,
      },
    ],
  },
  "headers": Anything,
  "request": Anything,
  "status": 200,
  "statusText": Anything,
}
`;

exports[`Buy silver ticket by wire without promocode manager see not reserved not deilivered ticket in list 1`] = `
Object {
  "config": Anything,
  "data": Object {
    "data": Array [
      Object {
        "createdAt": Any<String>,
        "deliveredAt": null,
        "eventId": Any<String>,
        "id": Any<String>,
        "number": "10002000",
        "reserved": false,
        "type": "silver_pass",
      },
    ],
  },
  "headers": Anything,
  "request": Anything,
  "status": 200,
  "statusText": Anything,
}
`;

exports[`Buy silver ticket by wire without promocode manager see not reserved not delivered ticket by id 1`] = `
Object {
  "config": Anything,
  "data": Object {
    "data": Object {
      "createdAt": Any<String>,
      "deliveredAt": null,
      "eventId": Any<String>,
      "id": Any<String>,
      "number": "10002000",
      "reserved": false,
      "type": "silver_pass",
    },
  },
  "headers": Anything,
  "request": Anything,
  "status": 200,
  "statusText": Anything,
}
`;

exports[`Buy silver ticket by wire without promocode manager see paid and delivered order by id 1`] = `
Object {
  "config": Anything,
  "data": Object {
    "data": Object {
      "cancelled": false,
      "currency": "RUB",
      "deliveredAt": Any<String>,
      "email": "john@example.com",
      "eventId": Any<String>,
      "firstName": "John",
      "id": Any<String>,
      "lastName": "Doe",
      "makedAt": Any<String>,
      "paid": true,
      "phone": "+123456789",
      "product": "silver_pass",
      "productId": Any<String>,
      "sum": "200",
      "tariffId": Any<String>,
      "userId": Any<String>,
    },
  },
  "headers": Anything,
  "request": Anything,
  "status": 200,
  "statusText": Anything,
}
`;

exports[`Buy silver ticket by wire without promocode manager see paid and delivered order in list 1`] = `
Object {
  "config": Anything,
  "data": Object {
    "data": Array [
      Object {
        "cancelled": false,
        "currency": "RUB",
        "deliveredAt": Any<String>,
        "email": "john@example.com",
        "eventId": Any<String>,
        "firstName": "John",
        "id": Any<String>,
        "lastName": "Doe",
        "makedAt": Any<String>,
        "paid": true,
        "phone": "+123456789",
        "product": "silver_pass",
        "productId": Any<String>,
        "sum": "200",
        "tariffId": Any<String>,
        "userId": Any<String>,
      },
    ],
  },
  "headers": Anything,
  "request": Anything,
  "status": 200,
  "statusText": Anything,
}
`;

exports[`Buy silver ticket by wire without promocode manager see reserved and delivered ticket by id 1`] = `
Object {
  "config": Anything,
  "data": Object {
    "data": Object {
      "createdAt": Any<String>,
      "deliveredAt": Any<String>,
      "eventId": Any<String>,
      "id": Any<String>,
      "number": "10002000",
      "reserved": true,
      "type": "silver_pass",
    },
  },
  "headers": Anything,
  "request": Anything,
  "status": 200,
  "statusText": Anything,
}
`;

exports[`Buy silver ticket by wire without promocode manager see reserved and delivered ticket in list 1`] = `
Object {
  "config": Anything,
  "data": Object {
    "data": Array [
      Object {
        "createdAt": Any<String>,
        "deliveredAt": Any<String>,
        "eventId": Any<String>,
        "id": Any<String>,
        "number": "10002000",
        "reserved": true,
        "type": "silver_pass",
      },
    ],
  },
  "headers": Anything,
  "request": Anything,
  "status": 200,
  "statusText": Anything,
}
`;

exports[`Buy silver ticket by wire without promocode manager see reserved not delivered ticket by id 1`] = `
Object {
  "config": Anything,
  "data": Object {
    "data": Object {
      "createdAt": Any<String>,
      "deliveredAt": null,
      "eventId": Any<String>,
      "id": Any<String>,
      "number": "10002000",
      "reserved": true,
      "type": "silver_pass",
    },
  },
  "headers": Anything,
  "request": Anything,
  "status": 200,
  "statusText": Anything,
}
`;

exports[`Buy silver ticket by wire without promocode manager see reserved not delivered ticket in list 1`] = `
Object {
  "config": Anything,
  "data": Object {
    "data": Array [
      Object {
        "createdAt": Any<String>,
        "deliveredAt": null,
        "eventId": Any<String>,
        "id": Any<String>,
        "number": "10002000",
        "reserved": true,
        "type": "silver_pass",
      },
    ],
  },
  "headers": Anything,
  "request": Anything,
  "status": 200,
  "statusText": Anything,
}
`;

exports[`Buy silver ticket by wire without promocode manager see tariff by id 1`] = `
Object {
  "config": Anything,
  "data": Object {
    "data": Object {
      "id": Any<String>,
      "segments": Array [
        Object {
          "price": Object {
            "amount": "200",
            "currency": "RUB",
          },
          "term": Object {
            "end": "3000-01-01 12:00:00",
            "start": "2000-01-01 12:00:00",
          },
        },
      ],
      "tariffType": "silver_pass",
    },
  },
  "headers": Anything,
  "request": Anything,
  "status": 200,
  "statusText": Anything,
}
`;

exports[`Buy silver ticket by wire without promocode manager see tariff in list 1`] = `
Object {
  "config": Anything,
  "data": Object {
    "data": Array [
      Object {
        "id": Any<String>,
        "segments": Array [
          Object {
            "price": Object {
              "amount": "200",
              "currency": "RUB",
            },
            "term": Object {
              "end": "3000-01-01 12:00:00",
              "start": "2000-01-01 12:00:00",
            },
          },
        ],
        "tariffType": "silver_pass",
      },
    ],
  },
  "headers": Anything,
  "request": Anything,
  "status": 200,
  "statusText": Anything,
}
`;

exports[`Buy silver ticket by wire without promocode visitor receives email with ticket 1`] = `
Object {
  "count": 1,
  "items": Array [
    Object {
      "Content": Object {
        "Body": "ticket number is 10002000",
        "Headers": Object {
          "Content-Transfer-Encoding": Array [
            "quoted-printable",
          ],
          "Content-Type": Array [
            "text/plain; charset=utf-8",
          ],
          "Date": Anything,
          "From": Array [
            "no-reply@event.com",
          ],
          "MIME-Version": Array [
            "1.0",
          ],
          "Message-ID": Anything,
          "Received": Anything,
          "Return-Path": Array [
            "<no-reply@event.com>",
          ],
          "Subject": Array [
            "Thanks for buy ticket",
          ],
          "To": Array [
            "john@example.com",
          ],
        },
        "MIME": null,
        "Size": 315,
      },
      "Created": Any<String>,
      "From": Object {
        "Domain": "event.com",
        "Mailbox": "no-reply",
        "Params": "",
        "Relays": null,
      },
      "ID": Any<String>,
      "MIME": null,
      "Raw": Object {
        "Data": Any<String>,
        "From": "no-reply@event.com",
        "Helo": "guuzen-events-nginx",
        "To": Array [
          "john@example.com",
        ],
      },
      "To": Array [
        Object {
          "Domain": "example.com",
          "Mailbox": "john",
          "Params": "",
          "Relays": null,
        },
      ],
    },
  ],
  "start": 0,
  "total": 1,
}
`;
